# minitorch

./: .gitignore  404.html  README.md  app.py  benchmark.py  char_transformer.py  index.html  mkdocs.yml  mnist_example.py  nn.py  pyproject.toml  requirements.txt  setup.py  sz.py  test_cases.py  test_grads.py  train.py
.github/workflows/: ci.yml  deploy-docs.yml
api/layers/: index.html
api/loss/: index.html
api/optim/: index.html
api/tensor/: index.html
docs/: how-it-works.md  index.md  performance.md  reading-guide.md  transformer.md  tutorial.md
docs/api/: data.md  grad_check.md  layers.md  loss.md  module.md  optim.md  tensor.md
minitorch/: __init__.py  backend.py  conv.py  data.py  functional.py  grad_check.py  layers.py  loss.py  module.py  optim.py  tensor.py  transformer.py  viz.py
minitorch.egg-info/: PKG-INFO  SOURCES.txt
search/: search_index.json
site/: 404.html  sitemap.xml
site/api/layers/: index.html
site/api/loss/: index.html
site/api/optim/: index.html
site/api/tensor/: index.html
site/tutorial/: index.html
tests/: test_gradients.py  test_new_features.py  test_tensor_ops.py
tutorial/: index.html
